# eventyay-tickets-exhibitors

./: .gitignore  .gitlab-ci.yml  .update-locales.sh  MANIFEST.in  Makefile  README.rst  pretixplugin.toml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: release.yml  style.yml  tests.yml
eventyay_exhibition/: models.py
eventyay_exhibition/migrations/: 0001_initial.py
eventyay_exhibition/templates/exhibitors/: add.html
exhibition/: api.py  apps.py  models.py  signals.py  views.py
exhibition/migrations/: 0001_initial.py  0002_alter_exhibitorinfo_booth_id_and_more.py
exhibition/templates/exhibitors/: add.html  delete.html  exhibitor_info.html
exhibitors/: api.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
exhibitors/migrations/: 0001_initial.py  0002_alter_exhibitorinfo_booth_id_and_more.py  0002_alter_exhibitorinfo_lead_scanning_enabled_and_more.py  0003_lead.py  0007_populate_booth_ids.py  0008_alter_exhibitorinfo_booth_id.py  0009_lead_booth_id_lead_booth_name_lead_exhibitor_name_and_more.py
exhibitors/templates/exhibitors/: add.html  delete.html  exhibitor_info.html  settings.html
tests/: conftest.py  test_main.py
