[project]
name = "eventyay-exhibition"
dynamic = ["version"]
description = "Eventyay-tickets plugin to add and manage exhibitors"
readme = "README.rst"
requires-python = ">=3.12, <3.13"
license = {file = "LICENSE"}
keywords = ["Eventyay-tickets"]
authors = [
    {name = "eventyay team", email = "support@eventyay.com"},
]
maintainers = [
    {name = "eventyay team", email = "support@eventyay.com"},
]

dependencies = [
    "flake8>=7.3.0",
]

[project.optional-dependencies]
test = [
    "pytest>=9.0.2",
    "pytest-django>=4.9.0",
    "pytest-env>=1.2.0",
    "pytest-rerunfailures>=16.1",
]

[project.entry-points."pretix.plugin"]
eventyay_exhibition = "eventyay_exhibition.apps:ExhibitorApp"

[project.entry-points."distutils.commands"]
build = "pretix_plugin_build.build:CustomBuild"

[build-system]
requires = [
    "setuptools",
    "pretix-plugin-build",
]

[project.urls]
homepage = "https://github.com/fossasia/eventyay-exhibition"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "eventyay_exhibition.__version__"}

[tool.setuptools.packages.find]
include = ["eventyay_exhibition*"]
namespaces = false
